--- a/pom.xml
+++ b/pom.xml
@@ -32,11 +32,12 @@
     <name>MineManiaChat</name>
 
     <properties>
-        <java.version>11</java.version>
+        <java.version>17</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <repositories>
+        <!-- Paper -->
         <repository>
             <id>papermc-repo</id>
             <url>https://repo.papermc.io/repository/maven-public/</url>
@@ -50,6 +51,7 @@
     </repositories>
 
     <dependencies>
+        <!-- Velocity -->
         <dependency>
             <groupId>com.velocitypowered</groupId>
             <artifactId>velocity-api</artifactId>
@@ -61,7 +63,15 @@
         <dependency>
             <groupId>com.github.MineManiaUK</groupId>
             <artifactId>MineManiaAPI</artifactId>
-            <version>1.8.1</version>
+            <version>1.9.0</version>
+        </dependency>
+
+        <!-- MiniPlaceholders -->
+        <dependency>
+            <groupId>io.github.miniplaceholders</groupId>
+            <artifactId>miniplaceholders-api</artifactId>
+            <version>2.2.2</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
