--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
 
     <groupId>com.github.minemaniauk</groupId>
     <artifactId>MineManiaChat</artifactId>
-    <version>1.4.0</version>
+    <version>2.0.0 Preview</version>
     <packaging>jar</packaging>
 
     <name>MineManiaChat</name>
@@ -55,7 +55,7 @@
         <dependency>
             <groupId>com.velocitypowered</groupId>
             <artifactId>velocity-api</artifactId>
-            <version>3.2.0-SNAPSHOT</version>
+            <version>3.4.0-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
 
@@ -72,6 +72,20 @@
             <artifactId>miniplaceholders-api</artifactId>
             <version>2.2.2</version>
             <scope>provided</scope>
+        </dependency>
+
+        <!-- PremiumVanishAPI -->
+        <dependency>
+            <groupId>com.github.LeonMangler</groupId>
+            <artifactId>PremiumVanishAPI</artifactId>
+            <version>2.9.18-2</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.github.eduardomcb</groupId>
+            <artifactId>discord-webhook</artifactId>
+            <version>1.0.0</version>
         </dependency>
     </dependencies>
 
