--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
 
     <groupId>com.github.minemaniauk</groupId>
     <artifactId>MineManiaChat</artifactId>
-    <version>2.0.0 Preview</version>
+    <version>2.0.1</version>
     <packaging>jar</packaging>
 
     <name>MineManiaChat</name>
