--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
 
     <groupId>com.github.minemaniauk</groupId>
     <artifactId>MineManiaChat</artifactId>
-    <version>2.0.2</version>
+    <version>2.0.1-Perspective-Testing</version>
     <packaging>jar</packaging>
 
     <name>MineManiaChat</name>
@@ -36,17 +36,17 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
-    <repositories>
-        <!-- Paper -->
-        <repository>
-            <id>papermc-repo</id>
-            <url>https://repo.papermc.io/repository/maven-public/</url>
-        </repository>
 
+    <repositories>
         <!-- GitHub Projects -->
         <repository>
             <id>jitpack.io</id>
             <url>https://jitpack.io</url>
+        </repository>
+        <!-- Paper -->
+        <repository>
+            <id>papermc-repo</id>
+            <url>https://repo.papermc.io/repository/maven-public/</url>
         </repository>
     </repositories>
 
@@ -86,6 +86,11 @@
             <groupId>com.github.eduardomcb</groupId>
             <artifactId>discord-webhook</artifactId>
             <version>1.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.Computerwhz</groupId>
+            <artifactId>Perspectiveapi-Java</artifactId>
+            <version>v1.0.0</version>
         </dependency>
     </dependencies>
 
